<resources>

    <!-- App Name -->
    <string name="app_name">MakeUp</string>

    <!-- MainActivity strings -->
    <string name="picture_content">MakeUp Picture</string>
    <string name="logo">Dan\'s MakeUp</string>
    <string name="slogan">Nation wide MakeUp app</string>

    <!-- Dashboard strings -->
    <string name="dashboard_menu">Dashboard Menu</string>
    <string name="add_account">Add Account</string>
    <string name="dashboard_header">Get An Artist</string>
    <string name="dashboard">Dashboard</string>
    <string name="all_categories">All Categories</string>
    <string name="location">Location</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="categories">Categories</string>
    <string name="lipsticks">Lipsticks</string>
    <string name="eyelashes">Eyelashes</string>
    <string name="hairstyles">Hairstyles</string>
    <string name="powder">Powder</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="slogan_name">We Give Everything Your Face Deserves</string>
    <string name="dashboard_image">Dashboard Image</string>
    <string name="chrome_icon">Chrome</string>

    <!-- HomeActivity strings -->
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="order">Order Item</string>
    <string name="first_image">First Image</string>
    <string name="second_image">Second Image</string>
    <string name="third_image">Third Image</string>
    <string name="fourth_image">Fourth Image</string>
    <string name="fifth_image">Fifth Image</string>
    <string name="sixth_image">Sixth Image</string>
    <string name="seventh_image">Seventh Image</string>
    <string name="eighth_image">Eighth Image</string>
    <string name="ninth_image">Ninth Image</string>
    <string name="tenth_image">Tenth Image</string>
    <string name="fragment_message">Drop Your Messages Here</string>
    <string name="fragment_search">You Just Clicked The Search Button</string>
    <string name="fragment_settings">Want To Access Settings?</string>

    <!-- LoginSignUpScreen strings -->
    <string name="retailer_image_content">Retailer Image</string>
    <string name="retailer_heading">Grow\n Your Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services!</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>

    <!-- Login strings -->
    <string name="back_button">Back Button</string>
    <string name="login_heading">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_account">Create Account</string>

    <!-- SignUp strings -->
    <string name="enter_full_name">Full Name</string>
    <string name="enterUsername">Username</string>
    <string name="enter_email">Email</string>
    <string name="enterPassword">Password</string>
    <string name="next">Next</string>

    <!-- SignUp2nd strings -->
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_age">Select Your Age</string>

    <!-- SignUp3nd strings -->
    <string name="enter_phone_number">Phone Number</string>

    <!-- OTP strings -->
    <string name="otp_image">OTP Image</string>
    <string name="close_icon">Close Button</string>
    <string name="otp_code_text">Code</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent to \n +2348163873576</string>
    <string name="verify_code">Verify Code</string>

    <!-- ContactUs strings -->
    <string name="contact_us">Contact Us</string>
    <string name="decision">Are You Sure You Want To Leave This Page?</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="exit">Exit</string>
    <string name="help">Help</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="faq">FAQ</string>

</resources>