<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/ic_fullscreen_exit"
        android:orderInCategory="2"
        android:title="@string/exit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="4"
        android:title="@string/help" />

    <item
        android:id="@+id/contact_developer"
        android:icon="@drawable/ic_contact_support"
        android:orderInCategory="1"
        android:title="@string/contact_developer"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_faq"
        android:orderInCategory="3"
        android:title="@string/faq" />

</menu>