<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="1"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_mail"
        android:orderInCategory="2"
        android:title="@string/message"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="3"
        android:title="@string/search"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="4"
        android:title="@string/settings"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:showAsAction="ifRoom" />

</menu>