<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".LoginSignUpScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/retailer_image_content"
            android:src="@drawable/eighth" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/retailer_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:fontFamily="@font/muli_light_italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login"
                style="?actionButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_background2"
                android:elevation="10dp"
                android:onClick="callLoginScreen"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:transitionName="transition_login" />

            <Button
                android:id="@+id/signUp"
                style="?actionButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_background2"
                android:elevation="10dp"
                android:onClick="callSignUpScreen"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:transitionName="transition_sign_up" />

        </LinearLayout>

        <Button
            android:id="@+id/contactUs"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="contactUs"
            android:text="@string/contact_us"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>